changed a photo in the index page

--- a/legacy/public_html/index.html
+++ b/legacy/public_html/index.html
@@ -303,7 +303,7 @@ a:hover
 <iframe width="480" height="295" src="https://www.youtube.com/embed/xyh_gRgUpAM?rel=0&amp;modestbranding=1&amp;showinfo=0&amp;version=3&amp;autohide=0&amp;theme=light&amp;color=white" frameborder="0"></iframe>
 </div>
 <div id="wb_Image2" style="position:absolute;left:36px;top:270px;width:304px;height:301px;z-index:10;">
-<img src="images/img0038.jpg" id="Image2" alt="" style="width:304px;height:301px;"></div>
+<img src="images/P1010449.JPG" id="Image2" alt="" style="width:304px;height:301px;"></div>
 </div>
 </body>
 </html>
