updated with the last version from the server

--- a/legacy/Buceo.html
+++ b/legacy/Buceo.html
@@ -239,47 +239,58 @@ a:hover
 </style>
 </head>
 <body>
-<div id="wb_Shape7" style="position:absolute;left:1px;top:262px;width:900px;height:642px;z-index:0;">
-<a href="sondemar@redpower.com.ar"><div id="Shape7"></div></a></div>
-<div id="wb_Shape4" style="position:absolute;left:1px;top:1007px;width:900px;height:45px;z-index:1;">
-<div id="Shape4"></div></div>
-<div id="wb_Text11" style="position:absolute;left:62px;top:1021px;width:537px;height:16px;z-index:2;text-align:left;">
-<span style="color:#FFFFFF;font-family:'Trebuchet MS';font-size:11px;">Cabañas Son de Mar</span></div>
-<div id="wb_Shape3" style="position:absolute;left:1px;top:912px;width:900px;height:80px;z-index:3;">
-<div id="Shape3"></div></div>
-<div id="wb_Text8" style="position:absolute;left:638px;top:1022px;width:198px;height:16px;text-align:right;z-index:4;">
-<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Tel: 236154597613</span></div>
-<div id="wb_Image1" style="position:absolute;left:1px;top:2px;width:900px;height:200px;z-index:5;">
-<img src="images/Logo.png" id="Image1" alt="" style="width:900px;height:200px;"></div>
-<div id="wb_Shape10" style="position:absolute;left:0px;top:202px;width:900px;height:50px;z-index:6;">
-<div id="Shape10"></div></div>
-<div id="wb_Shape1" style="position:absolute;left:0px;top:201px;width:900px;height:50px;z-index:7;">
-<div id="Shape1"></div></div>
-<div id="wb_CssMenu2" style="position:absolute;left:0px;top:201px;width:900px;height:50px;text-align:center;z-index:8;">
-<ul>
-<li class="firstmain"><a href="./index.html" target="_self">Home</a>
-</li>
-<li><a href="./Galeria.html" target="_self">Galer&#237;a&nbsp;de&nbsp;fotos</a>
-</li>
-<li><a class="withsubmenu" href="./Pesca.html" target="_self">&#191;Qu&#233;&nbsp;hacer&nbsp;en&nbsp;Playas&nbsp;Doradas?</a>
+  <div id="wb_Shape7" style="position:absolute;left:1px;top:262px;width:900px;height:642px;z-index:0;">
+    <a href="sondemar@redpower.com.ar"><div id="Shape7"></div></a>
+    <div id="Shape7">
+      <p style="font-size:14px;position:absolute; top:230px; margin: 20px">
+        Buceo y snorkeling: <br>
+        La fauna es mas variada y se encuentra totalmente salvaje y en ambientes naturales, existe un operador en la playa MAPU SUB de amplia experiencia y formación profesional, cuentan con embarcaciones, alquiler de equipos, <a href="https://www.facebook.com/mapusub">buceo brevetado</a>, cursos y bautismos.<br>
+        Durante la marea baja hacia el sur se forman piletas entre las rocas, de 1,5 mts de profundidad muy transparentes ideal para iniciar a los niños en la actividad, estas pozas de marea tienen abundante fauna: erizos, estrellas, anémonas, cangrejos, pulpitos, sargos, turcos, meros, etc.<br>
+        Los niños deben mirar y <b>no tocar</b> esos ecosistemas son muy frágiles y si cada uno se lleva una souvenir se perderán irremediablemente.<br>
+        <a href="https://www.youtube.com/watch?v=3BFg6lbTVSc"> Video de pesca submarina </a><br>
+        <a href="https://www.youtube.com/watch?v=TmfITTbxFvE&t=2s">Buceo scuba</a>
+      </p>
+      <img src="images/bandabuceadora.jpg"style="position:absolute; top:20px; left:94px; width:300px; height: 200px">
+      <img src="images/santi_buceando.jpg"style="position:absolute; top:20px; left:494px; width:300px; height: 200px">
+    </div>
+  </div>
+  <div id="wb_Shape4" style="position:absolute;left:1px;top:1007px;width:900px;height:45px;z-index:1;">
+  <div id="Shape4"></div></div>
+  <div id="wb_Text11" style="position:absolute;left:62px;top:1021px;width:537px;height:16px;z-index:2;text-align:left;">
+  <span style="color:#FFFFFF;font-family:'Trebuchet MS';font-size:11px;">Cabañas Son de Mar</span></div>
+  <div id="wb_Shape3" style="position:absolute;left:1px;top:912px;width:900px;height:80px;z-index:3;">
+  <div id="Shape3"></div></div>
+  <div id="wb_Text8" style="position:absolute;left:638px;top:1022px;width:198px;height:16px;text-align:right;z-index:4;">
+  <span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Tel: 236154597613</span></div>
+  <div id="wb_Image1" style="position:absolute;left:1px;top:2px;width:900px;height:200px;z-index:5;">
+  <img src="images/Logo.png" id="Image1" alt="" style="width:900px;height:200px;"></div>
+  <div id="wb_Shape10" style="position:absolute;left:0px;top:202px;width:900px;height:50px;z-index:6;">
+  <div id="Shape10"></div></div>
+  <div id="wb_Shape1" style="position:absolute;left:0px;top:201px;width:900px;height:50px;z-index:7;">
+  <div id="Shape1"></div></div>
+  <div id="wb_CssMenu2" style="position:absolute;left:0px;top:201px;width:900px;height:50px;text-align:center;z-index:8;">
+  <ul>
+  <li class="firstmain"><a href="./index.html" target="_self">Home</a>
+  </li>
+  <li><a href="./Galeria.html" target="_self">Galer&#237;a&nbsp;de&nbsp;fotos</a>
+  </li>
+  <li><a class="withsubmenu" href="./Pesca.html" target="_self">&#191;Qu&#233;&nbsp;hacer&nbsp;en&nbsp;Playas&nbsp;Doradas?</a>
 
-<ul>
-<li class="firstitem"><a href="./Pesca.html" target="_self">Pesca</a>
-</li>
-<li><a class="active" href="./Buceo.html" target="_self">Buceo</a>
-</li>
-<li class="lastitem"><a href="./Excursiones.html" target="_self">Excursiones</a>
-</li>
-</ul>
-</li>
-<li><a href="./La_playa.html" target="_self">La&nbsp;Playa</a>
-</li>
-<li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
-</li>
-<li><a href="./Contacto.php" target="_self">Contacto</a>
-</li>
-</ul>
-<br>
-</div>
+  <ul>
+  <li class="firstitem"><a href="./Pesca.html" target="_self">Pesca</a>
+  </li>
+  <li><a class="active" href="./Buceo.html" target="_self">Buceo</a>
+  </li>
+  </ul>
+  </li>
+  <li><a href="./La_playa.html" target="_self">La&nbsp;Playa</a>
+  </li>
+  <li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
+  </li>
+  <li><a href="./Contacto.php" target="_self">Contacto</a>
+  </li>
+  </ul>
+  <br>
+  </div>
 </body>
 </html>
