--- a/legacy/Pesca.html
+++ b/legacy/Pesca.html
@@ -239,47 +239,61 @@ a:hover
 </style>
 </head>
 <body>
-<div id="wb_Shape7" style="position:absolute;left:0px;top:260px;width:900px;height:642px;z-index:0;">
-<a href="sondemar@redpower.com.ar"><div id="Shape7"></div></a></div>
-<div id="wb_Shape4" style="position:absolute;left:0px;top:1005px;width:900px;height:45px;z-index:1;">
-<div id="Shape4"></div></div>
-<div id="wb_Text11" style="position:absolute;left:61px;top:1019px;width:537px;height:16px;z-index:2;text-align:left;">
-<span style="color:#FFFFFF;font-family:'Trebuchet MS';font-size:11px;">Cabañas Son de Mar</span></div>
-<div id="wb_Shape3" style="position:absolute;left:0px;top:910px;width:900px;height:80px;z-index:3;">
-<div id="Shape3"></div></div>
-<div id="wb_Text8" style="position:absolute;left:637px;top:1020px;width:198px;height:16px;text-align:right;z-index:4;">
-<span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Tel: 236154597613</span></div>
-<div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:900px;height:200px;z-index:5;">
-<img src="images/Logo.png" id="Image1" alt="" style="width:900px;height:200px;"></div>
-<div id="wb_Shape10" style="position:absolute;left:0px;top:200px;width:900px;height:50px;z-index:6;">
-<div id="Shape10"></div></div>
-<div id="wb_Shape1" style="position:absolute;left:0px;top:200px;width:900px;height:50px;z-index:7;">
-<div id="Shape1"></div></div>
-<div id="wb_CssMenu2" style="position:absolute;left:0px;top:200px;width:900px;height:50px;text-align:center;z-index:8;">
-<ul>
-<li class="firstmain"><a href="./index.html" target="_self">Home</a>
-</li>
-<li><a href="./Galeria.html" target="_self">Galer&#237;a&nbsp;de&nbsp;fotos</a>
-</li>
-<li><a class="withsubmenu active" href="./Pesca.html" target="_self">&#191;Qu&#233;&nbsp;hacer&nbsp;en&nbsp;Playas&nbsp;Doradas?</a>
+  <div id="wb_Shape7" style="position:absolute;left:0px;top:260px;width:900px;height:642px;z-index:0;">
+    <div id="Shape7" >
+      <p style="font-size:14px;position:absolute; top:10px; margin: 20px">
+        Pesca en Playas Doradas: <br>
+        La pesca de costa en Playas Doradas es abundante en cuanto a la captura de pejerreyes y robalos detrás de la suave rompiente con marea creciendo, utilizan de carnada anchoa que puede comprarse en el misma villa. Los lugares idóneos son la boca del arroyo El Salado, la restinga frente a la bajada de lanchas y las playas del sur Las Casitas y Los Suecos.<br>
+        Durante la primavera y en otoño arriman cazones de buen porte, tanto desde la costa como embarcado, se recomienda la pesca con devolución de esta especie.<br>
+        Embarcado la pesca es mas interesante, frente al balneario y tras una corta navegación se encuentra una antigua línea de costa que da lugar a una serie de restingas donde habitan randes bancos de Besugo colorado, más lejos tanto hacia el norte como al sur, ya contando con puntos mas precisos hay salmoneras muy bien pobladas de salmones y meros, mas lejos aun a gran profundidad habitan los bancos de merluza.<br>
+        La playa cuenta con una bajada de lanchas habilitada por prefectura con un puesto móvil en los meses de enero y febrero, es imprescindible pedir el rol de salida, y realizar el control de elementos de seguridad en el destacamento de Punta Colorada (radio , tasa anual al dia y matafuego incluido).<br>
+        <a href="https://www.youtube.com/watch?v=ePxbJBY0Bxs&t=1s">Video de pesca embarcado</a>
+      </p>
+      <img src="images/santi_buceando.jpg" style="position:absolute; top:290px; left:30px; width:250px; height:180px">
+      <img src="images/vasquito.jpg" style="position:absolute; top:290px; left:344px; width:200px; height:180px">
+      <img src="images/frente_salmones.jpg" style="position:absolute; top:290px; left:610px; width:250px; height:180px">
+    </div>
+    <a href="sondemar@redpower.com.ar">
+      <div id="Shape7"></div>
+    </a>
+  </div>
+  <div id="wb_Shape4" style="position:absolute;left:0px;top:1005px;width:900px;height:45px;z-index:1;">
+  <div id="Shape4"></div></div>
+  <div id="wb_Text11" style="position:absolute;left:61px;top:1019px;width:537px;height:16px;z-index:2;text-align:left;">
+  <span style="color:#FFFFFF;font-family:'Trebuchet MS';font-size:11px;">Cabañas Son de Mar</span></div>
+  <div id="wb_Shape3" style="position:absolute;left:0px;top:910px;width:900px;height:80px;z-index:3;">
+  <div id="Shape3"></div></div>
+  <div id="wb_Text8" style="position:absolute;left:637px;top:1020px;width:198px;height:16px;text-align:right;z-index:4;">
+  <span style="color:#FFFFFF;font-family:Arial;font-size:13px;">Tel: 236154597613</span></div>
+  <div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:900px;height:200px;z-index:5;">
+  <img src="images/Logo.png" id="Image1" alt="" style="width:900px;height:200px;"></div>
+  <div id="wb_Shape10" style="position:absolute;left:0px;top:200px;width:900px;height:50px;z-index:6;">
+  <div id="Shape10"></div></div>
+  <div id="wb_Shape1" style="position:absolute;left:0px;top:200px;width:900px;height:50px;z-index:7;">
+  <div id="Shape1"></div></div>
+  <div id="wb_CssMenu2" style="position:absolute;left:0px;top:200px;width:900px;height:50px;text-align:center;z-index:8;">
+  <ul>
+  <li class="firstmain"><a href="./index.html" target="_self">Home</a>
+  </li>
+  <li><a href="./Galeria.html" target="_self">Galer&#237;a&nbsp;de&nbsp;fotos</a>
+  </li>
+  <li><a class="withsubmenu active" href="./Pesca.html" target="_self">&#191;Qu&#233;&nbsp;hacer&nbsp;en&nbsp;Playas&nbsp;Doradas?</a>
 
-<ul>
-<li class="firstitem"><a class="active" href="./Pesca.html" target="_self">Pesca</a>
-</li>
-<li><a href="./Buceo.html" target="_self">Buceo</a>
-</li>
-<li class="lastitem"><a href="./Excursiones.html" target="_self">Excursiones</a>
-</li>
-</ul>
-</li>
-<li><a href="./La_playa.html" target="_self">La&nbsp;Playa</a>
-</li>
-<li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
-</li>
-<li><a href="./Contacto.php" target="_self">Contacto</a>
-</li>
-</ul>
-<br>
-</div>
+  <ul>
+  <li class="firstitem"><a class="active" href="./Pesca.html" target="_self">Pesca</a>
+  </li>
+  <li><a href="./Buceo.html" target="_self">Buceo</a>
+  </li>
+  </ul>
+  </li>
+  <li><a href="./La_playa.html" target="_self">La&nbsp;Playa</a>
+  </li>
+  <li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
+  </li>
+  <li><a href="./Contacto.php" target="_self">Contacto</a>
+  </li>
+  </ul>
+  <br>
+  </div>
 </body>
 </html>
