--- a/legacy/Que_hacer.html
+++ b/legacy/Que_hacer.html
@@ -249,7 +249,9 @@ a:hover
 <body>
 <div id="container">
 <div id="wb_Shape7" style="position:absolute;left:0px;top:260px;width:900px;height:642px;z-index:0;">
-<a href="sondemar@redpower.com.ar"><div id="Shape7"></div></a></div>
+  <img src="images/"style= ""></img>
+  <a href="sondemar@redpower.com.ar"><div id="Shape7"></div></a>
+</div>
 <div id="wb_Shape4" style="position:absolute;left:0px;top:1005px;width:900px;height:45px;z-index:1;">
 <div id="Shape4"></div></div>
 <div id="wb_Text11" style="position:absolute;left:61px;top:1019px;width:537px;height:16px;z-index:2;text-align:left;">
@@ -276,8 +278,6 @@ a:hover
 <li class="firstitem"><a href="./Pesca.html" target="_self">Pesca</a>
 </li>
 <li><a href="./Buceo.html" target="_self">Buceo</a>
-</li>
-<li class="lastitem"><a href="./Excursiones.html" target="_self">Excursiones</a>
 </li>
 </ul>
 </li>
