hackee el sitio viejo para que no dependa de php, pero no tiene formularioZZ

--- a/legacy/Excursiones.html
+++ b/legacy/Excursiones.html
@@ -274,7 +274,7 @@ a:hover
 </li>
 <li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
 </li>
-<li><a href="./Contacto.php" target="_self">Contacto</a>
+<li><a href="./Contacto.html" target="_self">Contacto</a>
 </li>
 </ul>
 <br>
