--- a/legacy/Galeria.html
+++ b/legacy/Galeria.html
@@ -378,7 +378,7 @@ $("a[rel^='PhotoGallery1']").fancybox({});
 </li>
 <li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
 </li>
-<li><a href="./Contacto.php" target="_self">Contacto</a>
+<li><a href="./Contacto.html" target="_self">Contacto</a>
 </li>
 </ul>
 <br>
