--- a/legacy/La_playa.html
+++ b/legacy/La_playa.html
@@ -298,7 +298,7 @@ a:hover
 </li>
 <li><a href="./Como_llegar.html" target="_self">C&#243;mo&nbsp;llegar</a>
 </li>
-<li><a href="./Contacto.php" target="_self">Contacto</a>
+<li><a href="./Contacto.html" target="_self">Contacto</a>
 </li>
 </ul>
 <br>
